src/test/resources/annotator/DuplicateEnumConstantValue.proto
syntax = "proto3";

package annotator;

enum TestEnum {
    A = <error descr="Duplicate constant value: 0">0</error>;
    B = <error descr="Duplicate constant value: 0">0</error>;
}